--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.1.RELEASE</version>
     </parent>
-    <groupId>com.mahama</groupId>
+    <groupId>com.github.mahamarepo</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
     <repositories>
         <repository>
@@ -27,12 +27,12 @@
         <dependency>
             <groupId>com.github.mahamarepo</groupId>
             <artifactId>annotation</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.mahamarepo</groupId>
             <artifactId>rabbitMQ</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
